# hep-ga

./: .gitignore  CMakeLists.txt  README.md
doc/: Doxyfile.in
examples/: CMakeLists.txt
include/hep/ga/: blade.hpp  inversion.hpp  null_vector.hpp  squared_reverse_norm.hpp  versor_product.hpp
test/: test_conformal_g41.cpp  test_difference_in_g2.cpp  test_grade_in_g2.cpp  test_inner_product_in_g2.cpp  test_multi_vector_in_g2.cpp  test_multi_vector_in_g3.cpp  test_multi_vector_in_g4.cpp  test_negation_in_g2.cpp  test_next_bit_permutation.cpp  test_outer_product_in_g2.cpp  test_pop_count.cpp  test_product_in_g2.cpp  test_product_in_g3.cpp  test_product_in_g4.cpp  test_product_with_scalar_in_g2.cpp  test_reversion_in_g3.cpp  test_selection_in_g2.cpp  test_sign_table.cpp  test_sum_in_g2.cpp  test_sum_with_scalar_in_g2.cpp
